kinda working example, need to cleanup

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "CppADCodeGen"]
 	path = CppADCodeGen
 	url = git@github.com:joaoleal/CppADCodeGen.git
+[submodule "inja"]
+	path = inja
+	url = git@github.com:pantor/inja.git
+[submodule "json"]
+	path = json
+	url = git@github.com:nlohmann/json.git
