Updated build process to use CPM and patch to pull CppADCodeGen

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,16 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# Set CMake Policies
+set(CMAKE_POLICY_DEFAULT_CMP0167 NEW)
+set(CMAKE_POLICY_DEFAULT_CMP0175 OLD)
+
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE Release)
+endif()
+
+include(cmake/CPM.cmake)
+
 # Find required packages
 find_package(PkgConfig REQUIRED)
 find_package(pinocchio REQUIRED)
@@ -16,16 +26,23 @@ find_package(inja REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system filesystem)
 
-# Find CppAD and CppADCodeGen
+# Find CppAD
 find_package(cppad QUIET)
 if(NOT cppad_FOUND)
     pkg_check_modules(cppad REQUIRED cppad)
 endif()
 
-find_package(cppadcg QUIET)
-if(NOT cppadcg_FOUND)
-    pkg_check_modules(cppadcg REQUIRED cppadcg)
-endif()
+# Setup CppADCG
+CPMAddPackage(
+  URI "gh:joaoleal/CppADCodeGen@2.5.0"
+  PATCHES       CppADCodeGen.patch
+  OPTIONS "ENABLE_THREAD_POOL_TESTS Off"
+)
+
+add_subdirectory(CppADCodeGen)
+list(APPEND cppadcg_INCLUDE_DIRS
+  "${CMAKE_CURRENT_SOURCE_DIR}/CppADCodeGen/include"
+  "${CMAKE_CURRENT_BINARY_DIR}/CppADCodeGen/include")
 
 # Create the executable
 add_executable(fkcc_gen src/fkcc_gen.cc)
@@ -43,7 +60,6 @@ target_link_libraries(fkcc_gen
     pinocchio::pinocchio
     ${Boost_LIBRARIES}
     ${cppad_LIBRARIES}
-    ${cppadcg_LIBRARIES}
     pantor::inja
     nlohmann_json::nlohmann_json
     CGAL::CGAL
