--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,9 @@
 /.cache/
 /.cpm-cache/
 /build/
-/cppadcg_build/
-/cppadcg_install/
-/pinocchio_build/
-/pinocchio_install/
 /debug/
 /output.data
 /output.json
 /*_fk.hh
+/resources/
+Dockerfile
