--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,17 @@ if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
 
+# Download and setup CPM
 if(NOT DEFINED ENV{CPM_SOURCE_CACHE})
   set(ENV{CPM_SOURCE_CACHE} ${CMAKE_CURRENT_SOURCE_DIR}/.cpm-cache)
 endif()
-include(cmake/CPM.cmake)
+
+file(
+  DOWNLOAD
+  https://github.com/cpm-cmake/CPM.cmake/releases/download/v0.42.0/CPM.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake
+)
+include(${CMAKE_CURRENT_BINARY_DIR}/cmake/CPM.cmake)
 
 # Find required packages
 find_package(PkgConfig REQUIRED)
@@ -25,20 +32,26 @@ find_package(pinocchio REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(CGAL REQUIRED)
 find_package(fmt REQUIRED)
-find_package(inja REQUIRED)
 find_package(nlohmann_json REQUIRED)
 find_package(Boost REQUIRED COMPONENTS system filesystem)
+
+find_package(inja QUIET)
+if(NOT inja_FOUND)
+  CPMAddPackage(
+    URI "gh:pantor/inja@3.4.0"
+  )
+endif()
 
 # Find CppAD
 find_package(cppad QUIET)
 if(NOT cppad_FOUND)
-    pkg_check_modules(cppad REQUIRED cppad)
+  pkg_check_modules(cppad REQUIRED cppad)
 endif()
 
 # Setup CppADCG
 CPMAddPackage(
   URI "gh:joaoleal/CppADCodeGen@2.5.0"
-  PATCHES CppADCodeGen.patch
+  PATCHES "${CMAKE_CURRENT_SOURCE_DIR}/CppADCodeGen.patch"
   OPTIONS "ENABLE_THREAD_POOL_TESTS Off"
 )
 
@@ -71,4 +84,10 @@ target_link_libraries(fkcc_gen
 # Add compiler definitions
 target_compile_definitions(fkcc_gen PRIVATE
     ${pinocchio_CFLAGS_OTHER}
+)
+
+include(GNUInstallDirs)
+install(TARGETS fkcc_gen
+  RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+  COMPONENT Runtime
 )
